--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <div id="color" class="color"></div>
         <div class="code-display">
           <div class="hex">
-            <h4>Hex Color</h4>
+            <h4>Hex Code</h4>
             <h3 id="hexColor"></h3>
           </div>
           <div class="rgb">
-            <h4>rgb Color</h4>
+            <h4>rgb Code</h4>
             <h3 id="rgbColor"></h3>
           </div>
         </div>
